Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -256,7 +256,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hometown = 'NYC'"
+    "hometown = 'NYC'\n",
+    "home"
    ]
   },
   {
