Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -307,20 +307,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "can't assign to keyword (<ipython-input-11-d03f602a0186>, line 1)",
+     "evalue": "can't assign to keyword (<ipython-input-12-c0c5e5a80b11>, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-11-d03f602a0186>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    None = 1\u001b[0m\n\u001b[0m            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m can't assign to keyword\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-12-c0c5e5a80b11>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    None = 'yES'\u001b[0m\n\u001b[0m                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m can't assign to keyword\n"
      ]
     }
    ],
    "source": [
-    "None = \n"
+    "None = 'yES'\n"
    ]
   },
   {
